Convert SpringBootTest to MockitoExtension