@@ -4,10 +4,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
@@ -47,6 +52,7 @@ import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -64,11 +70,8 @@ import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.ga.enums.dq.HeardFromRepresentationTypes.CLAIMANT_AND_DEFENDANT;
 
-@SpringBootTest(classes = {
-    JudicialFinalDecisionHandler.class,
-    JacksonAutoConfiguration.class,
-    GaForLipService.class,
-})
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
     private static final String ON_INITIATIVE_SELECTION_TEST = "As this order was made on the court's own initiative, "
@@ -81,29 +84,37 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     private static final LocalDate localDatePlus7days = LocalDate.now().plusDays(7);
     private static final LocalDate localDatePlus14days = LocalDate.now().plusDays(14);
     private static final LocalDate localDatePlus21days = LocalDate.now().plusDays(21);
-    @Autowired
-    private JudicialFinalDecisionHandler handler;
-    @MockBean
-    private FreeFormOrderGenerator freeFormOrderGenerator;
-    @MockBean
-    private AssistedOrderFormGenerator assistedOrderFormGenerator;
-    @Autowired
-    private ObjectMapper objMapper;
-    @MockBean
-    private GeneralAppLocationRefDataService locationRefDataService;
-    @MockBean
-    private DeadlinesCalculator deadlinesCalculator;
-    @MockBean
-    private IdamClient idamClient;
-    @MockBean
+
+    @Spy
+    private ObjectMapper objMapper = new ObjectMapper()
+        .registerModule(new JavaTimeModule())
+        .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+
+    @Mock
     private CaseDetailsConverter caseDetailsConverter;
-    @MockBean
+
+    @InjectMocks
+    private JudicialFinalDecisionHandler handler;
+
+    @Mock
+    private FreeFormOrderGenerator freeFormOrderGenerator;
+    @Mock
+    private AssistedOrderFormGenerator assistedOrderFormGenerator;
+    @Mock
+    private GeneralAppLocationRefDataService locationRefDataService;
+    @Mock
+    private DeadlinesCalculator deadlinesCalculator;
+    @Mock
+    private IdamClient idamClient;
+    @Mock
     private CoreCaseDataService coreCaseDataService;
+    @Mock
+    private GaForLipService gaForLipService;
 
     @BeforeEach
     void setUp() {
-        when(coreCaseDataService.getCase(any())).thenReturn(CaseDetails.builder().build());
-        when(caseDetailsConverter.toGeneralApplicationCaseData(any())).thenReturn(GeneralApplicationCaseData.builder().build());
+        when(coreCaseDataService.getCase(any())).thenReturn(CaseDetails.builder().data(new HashMap<>()).build());
+        when(caseDetailsConverter.toGeneralApplicationCaseData(any())).thenCallRealMethod();
         when(deadlinesCalculator
                  .getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(7)))
             .thenReturn(localDatePlus7days);
@@ -203,7 +214,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
                 "claimantPartyName")
             .isEqualTo(caseData.getClaimant1PartyName());
         assertThat(response.getData().get("assistedOrderRepresentation")).extracting("claimantDefendantRepresentation").extracting(
-                "defendantOnePartyName")
+                "defendantPartyName")
             .isEqualTo(caseData.getDefendant1PartyName());
         assertThat(response.getData()).extracting("assistedOrderMakeAnOrderForCosts").extracting(
                 "assistedOrderAssessmentThirdDropdownDate")
@@ -214,20 +225,20 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
         assertThat(response.getData()).extracting("assistedOrderMakeAnOrderForCosts").extracting(
                 "assistedOrderCostsFirstDropdownDate")
             .isEqualTo(localDatePlus14days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownGranted").extracting(
-                "assistedOrderAppealFirstOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownGranted").extracting(
-                "assistedOrderAppealSecondOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownRefused").extracting(
-                "assistedOrderAppealFirstOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownRefused").extracting(
-                "assistedOrderAppealSecondOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForGranted").extracting(
+                "appealChoiceOptionA")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForGranted").extracting(
+                "appealChoiceOptionB")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForRefused").extracting(
+                "appealChoiceOptionA")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForRefused").extracting(
+                "appealChoiceOptionB")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
-            .get("alternativeHearingLocation")).get("list_items")).get(0))
+            .get("alternativeHearingLocation")).get("list_items")).getFirst())
                        .get("label")).isEqualTo("Site Name 1 - Address1 - 18000");
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
             .get("hearingLocationList")).get("list_items")).get(0))
@@ -278,7 +289,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
                 "claimantPartyName")
             .isEqualTo(caseData.getClaimant1PartyName());
         assertThat(response.getData().get("assistedOrderRepresentation")).extracting("claimantDefendantRepresentation").extracting(
-                "defendantOnePartyName")
+                "defendantPartyName")
             .isEqualTo(caseData.getDefendant1PartyName());
         assertThat(response.getData().get("assistedOrderRepresentation")).extracting("claimantDefendantRepresentation").extracting(
                 "defendantTwoPartyName")
@@ -292,20 +303,20 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
         assertThat(response.getData()).extracting("assistedOrderMakeAnOrderForCosts").extracting(
                 "assistedOrderCostsFirstDropdownDate")
             .isEqualTo(localDatePlus14days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownGranted").extracting(
-                "assistedOrderAppealFirstOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownGranted").extracting(
-                "assistedOrderAppealSecondOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownRefused").extracting(
-                "assistedOrderAppealFirstOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
-        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("assistedOrderAppealDropdownRefused").extracting(
-                "assistedOrderAppealSecondOption")
-            .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForGranted").extracting(
+                "appealChoiceOptionA")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForGranted").extracting(
+                "appealChoiceOptionB")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForRefused").extracting(
+                "appealChoiceOptionA")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
+        assertThat(response.getData().get("assistedOrderAppealDetails")).extracting("appealTypeChoicesForRefused").extracting(
+                "appealChoiceOptionB")
+            .extracting("appealGrantedRefusedDate").isEqualTo(localDatePlus21days.toString());
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
-            .get("alternativeHearingLocation")).get("list_items")).get(0))
+            .get("alternativeHearingLocation")).get("list_items")).getFirst())
                        .get("label")).isEqualTo("Site Name 1 - Address1 - 18000");
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
             .get("hearingLocationList")).get("list_items")).get(0))
